--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.13.2"
   }
 }
